<?xml version="1.0"?>
<package format="2">
  <name>wroboclaw</name>
  <version>0.0.0</version>
  <description>WChungus</description>
  <maintainer email="egeng@wisc.edu">E. Geng</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
